2009-04-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-window-manager.h: Remove unused return value from
	the client_responding handler type.
	* matchbox/core/mb-wm-client.c (mb_wm_client_init): According to Mox's
	wish, increase ping timeout from 1000 to 6000 ms.

2009-04-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_destroy):
	  Reverted the latest workaround for NB#109094.
	  The problem is supposed to be fixed in hildon-desktop
	  and it broke long-press-back-button.

2009-04-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.29

2009-04-02  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: Removed accidentally checked
	in code
	* matchbox/core/mb-wm-decor.c: Fixed NB#109094 - crash caused by
	clicking on title bar button repeatedly very quickly

2009-04-02  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: More fixes for
	  g_object_unref - deal with weak reference on clutter
	  actors.

2009-04-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.28

2009-04-02  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Made sure g_object_unref
	  works properly on clutter actors

2009-04-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.27

2009-04-01  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c (call_handlers_for_event):
	Fix for the case where a handler is removed from the handlers list
	while it is being called.

2009-04-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Remove escaping from
	WM_NAME and _NET_WM_NAME titles.

2009-04-01  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for BN#107681.