@@ -289,7 +289,7 @@ MBWM_CLIENT_BUILDDIR='$(top_builddir)/matchbox/client-types'
 MBWM_THEME_BUILDDIR='$(top_builddir)/matchbox/theme-engines'
 MBWM_COMPMGR_BUILDDIR='$(top_builddir)/matchbox/comp-mgr'
 # -Wall should be turned on later
-MBWM_CFLAGS="$MBWM_CFLAGS $MBWM_DEBUG_CFLAGS $XFIXES_CFLAGS $XEXT_CFLAGS $XCURSOR_CFLAGS -g -O0"
+MBWM_CFLAGS="$MBWM_CFLAGS $MBWM_DEBUG_CFLAGS $XFIXES_CFLAGS $XEXT_CFLAGS $XCURSOR_CFLAGS -g -O0 -Werror"
 MBWM_LIBS="$MBWM_LIBS $XFIXES_LIBS $XEXT_LIBS $XCURSOR_LIBS $MBWM_EXTRA_LIBS -O0"
 
 AC_SUBST([MBWM_CFLAGS])
